@@ -3060,6 +3060,149 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
+DECL|method|testAddFieldThenReload
+specifier|public
+name|void
+name|testAddFieldThenReload
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|deleteCore
+argument_list|()
+expr_stmt|;
+name|File
+name|managedSchemaFile
+init|=
+operator|new
+name|File
+argument_list|(
+name|tmpConfDir
+argument_list|,
+literal|"managed-schema"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|managedSchemaFile
+operator|.
+name|delete
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Delete managed-schema so it won't block parsing a new schema
+name|initCore
+argument_list|(
+literal|"solrconfig-mutable-managed-schema.xml"
+argument_list|,
+literal|"schema-one-field-no-dynamic-field.xml"
+argument_list|,
+name|tmpSolrHome
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+name|fieldName
+init|=
+literal|"new_text_field"
+decl_stmt|;
+name|assertNull
+argument_list|(
+literal|"Field '"
+operator|+
+name|fieldName
+operator|+
+literal|"' is present in the schema"
+argument_list|,
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getLatestSchema
+argument_list|()
+operator|.
+name|getFieldOrNull
+argument_list|(
+name|fieldName
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|options
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|IndexSchema
+name|oldSchema
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getLatestSchema
+argument_list|()
+decl_stmt|;
+name|String
+name|fieldType
+init|=
+literal|"text"
+decl_stmt|;
+name|SchemaField
+name|newField
+init|=
+name|oldSchema
+operator|.
+name|newField
+argument_list|(
+name|fieldName
+argument_list|,
+name|fieldType
+argument_list|,
+name|options
+argument_list|)
+decl_stmt|;
+name|IndexSchema
+name|newSchema
+init|=
+name|oldSchema
+operator|.
+name|addField
+argument_list|(
+name|newField
+argument_list|)
+decl_stmt|;
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|setLatestSchema
+argument_list|(
+name|newSchema
+argument_list|)
+expr_stmt|;
+name|h
+operator|.
+name|reload
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 
